--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "BakerslineGo",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/icon1.png",
     "scheme": "bakerslinego",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -12,11 +12,13 @@
       "supportsTablet": true
     },
     "android": {
+      "softwareKeyboardLayoutMode": "resize",
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.gourav_bajpai1212.BakerslineGo"
     },
     "web": {
       "bundler": "metro",
@@ -28,15 +30,20 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
-          "imageWidth": 200,
-          "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
+          "image": "./assets/images/splash.png"
         }
       ]
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "590e7a8c-ce8a-48c4-afdc-67270e82da2b"
+      }
+    },
+
+    "assetBundlePatterns": ["**/*"]
   }
 }
